--- a/inventory.ini
+++ b/inventory.ini
@@ -8,7 +8,11 @@
 [localhost]
 localhost
 
-
+[localhost:vars]
+Course="DevOps with AWS"
+Trainer="Sivakumar"
+Duration="120hrs"
+WISHES="Morning from inventory"
 
 [db]
 172.31.16.152
