--- a/14-filters.yaml
+++ b/14-filters.yaml
@@ -4,3 +4,21 @@
   - name: print default value
     ansible.builtin.debug:
       msg: "Hello {{course | default('Ansible') }}"
+
+  - name: upper case
+  hosts: localhost
+  vars:
+    greeting: "Hello, Good Morning"
+  tasks:
+  - name: convert into uppercase
+    ansible.builtin.debug:
+      msg: "{{ greeting | upper }}"
+
+  - name: lower case
+  hosts: localhost
+  vars:
+    greeting: "Hello, Good Morning"
+  tasks:
+  - name: convert into lowercase
+    ansible.builtin.debug:
+      msg: "{{ greeting | lower }}"
