--- a/14-filters.yaml
+++ b/14-filters.yaml
@@ -24,3 +24,21 @@
   - name: convert into lowercase
     ansible.builtin.debug:
       msg: "{{ greeting | lower }}"
+
+- name: remove duplicates
+  hosts: localhost
+  vars:
+    numbers: [1, 2, 3, 3, 4, 4, 5]
+  tasks:
+  - name: remove duplicates
+    ansible.builtin.debug:
+      msg: "{{ numbers | unique }}"
+
+- name: print min and max
+  hosts: localhost
+  vars:
+    ages: [25, 35, 67, 89]
+  tasks:
+  - name: print min and max
+    ansible.builtin.debug:
+      msg: " min age: {{ ages | min }}, max age: {{ ages | max }}"
